@@ -3,6 +3,9 @@
 # Distributed under the GPL v2
 
   15 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> gen_bootloader.sh:
+  Add check for existing grub.conf entry for kernel
+
+  15 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> gen_bootloader.sh:
   Default to '0' if 'default' line not found at all in existing grub.conf
 
   15 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> gen_bootloader.sh:
